# mpl11

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  add_8hpp.html  add_8hpp_source.html  advance_8hpp.html  advance_8hpp_source.html  algorithm_2copy_8hpp.html  algorithm_2copy_8hpp_source.html  algorithm_2sort_8hpp.html  algorithm_2sort_8hpp_source.html  all_8hpp.html  all_8hpp_source.html  all__any__none_8cpp.html  all__of_8cpp.html  all__of_8hpp.html  all__of_8hpp_source.html  always_8cpp.html  always_8hpp.html  always_8hpp_source.html  and_8hpp.html  and_8hpp_source.html  and__or_8cpp.html  annotated.html  any_8hpp.html  any_8hpp_source.html  any__of_8cpp.html  any__of_8hpp.html  any__of_8hpp_source.html  apply_8cpp.html  apply_8hpp.html  apply_8hpp_source.html  apply__wrap_8cpp.html  apply__wrap_8hpp.html  apply__wrap_8hpp_source.html  arg_8cpp.html  (+1736 more)
benchmarks/: CMakeLists.txt  partial_specializations.cpp  vector.cpp
benchmarks/alias/: _main.erb  alias.erb.cpp
benchmarks/at_index/: _main.erb  multiple_inheritance.erb.cpp  multiple_inheritance2.erb.cpp  naive.erb.cpp  overload_resolution.erb.cpp
benchmarks/at_key/: _env.rb  _main.erb  multiple_inheritance.erb.cpp  multiple_inheritance2.erb.cpp  single_inheritance.erb.cpp
benchmarks/count_if/: _env.rb  _main.erb  variadic_sizeof.erb.cpp  variadic_sum.erb.cpp
benchmarks/fmap/: _base.erb  _env.rb  _main.erb  naive.erb.cpp  vectorized.erb.cpp
benchmarks/foldl/: _env.rb  _main.erb  _until.erb  _variadic.erb  bounded.erb.cpp  cons.erb.cpp  list.erb.cpp  until_aliased.erb.cpp  until_naive.erb.cpp  until_unrolled.erb.cpp  variadic_aliased.erb.cpp  variadic_arrow.erb.cpp  variadic_unrolled.erb.cpp  variadic_variabletp.erb.cpp
benchmarks/foldr/: _env.rb  _main.erb  _variadic.erb  until_naive.erb.cpp  variadic_naive.erb.cpp
benchmarks/instantiation/: _env.rb  flat.erb.cpp  inherit.erb.cpp  mention.erb.cpp  nested.erb.cpp
benchmarks/instantiation_cost/: _env.rb  struct.erb.cpp  variable_template.erb.cpp
benchmarks/logical_or/: _env.rb  _main.erb  lazy_naive_struct.erb.cpp  strict_constexpr_array.erb.cpp  strict_is_same.erb.cpp  strict_noexcept.erb.cpp  strict_overload.erb.cpp  strict_specialization.erb.cpp
benchmarks/vector/: at.cpp  foldl.cpp  pop_back.cpp
doc/: CMakeLists.txt  Doxyfile.in  _associative_sequence.html  _back_extensible_sequence.html  _bidirectional_iterator.html  _bidirectional_sequence.html  _categorizable.html  _concepts.html  _equality_comparable.html  _forward_iterator.html  _forward_sequence.html  _integral_constant.html  _lambda_expression.html  _less_than_comparable.html  _metafunction.html  _metafunction_class.html  _placeholder.html  _placeholder_expression.html  _random_access_iterator.html  _random_access_sequence.html  _random_extensible_sequence.html  add_8hpp.html  add_8hpp_source.html  advance_8cpp.html  advance_8hpp.html  advance_8hpp_source.html  algorithm_2advance_8hpp_source.html  algorithm_2all__of_8hpp_source.html  algorithm_2copy_8hpp.html  algorithm_2copy_8hpp_source.html  algorithm_2count_8hpp_source.html  algorithm_2count__if_8hpp.html  algorithm_2distance_8hpp_source.html  algorithm_2equal_8hpp.html  algorithm_2equal_8hpp_source.html  algorithm_2find_8hpp.html  algorithm_2find__if_8hpp_source.html  algorithm_2foldr_8hpp_source.html  algorithm_2is__permutation_8hpp_source.html  algorithm_2min_8hpp.html  (+1684 more)
doc/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6f.js  all_72.js  all_74.js  all_75.js  all_76.js  classes_61.js  classes_63.js  classes_65.js  classes_66.js  classes_67.js  classes_69.js  classes_6a.js  classes_6b.js  classes_6e.js  classes_70.js  classes_72.js  classes_73.js  classes_74.js  classes_75.js  classes_7a.js  files_61.js  files_62.js  files_63.js  files_64.js  files_65.js  files_68.js  files_69.js  files_6b.js  files_6c.js  files_6d.js  files_6e.js  files_6f.js  (+27 more)
example/: CMakeLists.txt
test/: CMakeLists.txt  accumulate.cpp  advance.cpp  all_any_none.cpp  all_of.cpp  always.cpp  and.cpp  any_of.cpp  apply.cpp  apply_pack.cpp  apply_wrap.cpp  arg.cpp  args.cpp  arithmetic.cpp  as_placeholder.cpp  associative_sequence.cpp  at.cpp  back.cpp  back_extensible_container.cpp  bidirectional_iterator.cpp  bidirectional_sequence.cpp  bind.cpp  bitwise.cpp  bool.cpp  cast.cpp  check_finite_iterable.hpp  check_foldable.hpp  class_of.cpp  comparable.cpp  compose.cpp  concept.cpp  cons.cpp  contains.cpp  count.cpp  count_if.cpp  couple.cpp  curry.cpp  directional_sequence.cpp  drop.cpp  drop_while.cpp  (+108 more)
test/algorithm/: advance.cpp  all_of.cpp  any_of.cpp  contains.cpp  count.cpp  count_if.cpp  distance.cpp  equal.cpp  find.cpp  find_if.cpp  is_permutation.cpp  max.cpp  min.cpp  none_of.cpp  sort.cpp
test/before_os/: if.cpp  pair.cpp
test/benchmark/: CMakeLists.txt  at.cpp  foldl.cpp  instantiations.cpp  map.cpp  max_c.cpp  or_c.cpp  sum_c.cpp  vector50_at.cpp  vector50_pop_back.cpp  vector_at.cpp  vector_foldl.cpp  vector_pop_back.cpp  while.cpp
test/container/: map.cpp  pair.cpp  set.cpp  variadic.cpp  vector.cpp
test/core/: box.cpp  cast.cpp  cast_to.cpp  common_datatype.cpp  datatype.cpp  foreign.cpp
test/detail/: at_index.cpp  at_key.cpp  basic_map.cpp  best_category_for.cpp  bool_cast.cpp  conditional.cpp  count_if.cpp  dependent.cpp  dependent_on.cpp  dispatch_category.cpp  eager_any.cpp  either.cpp  foldl_n.cpp  foldl_until.cpp  has_xxx.cpp  inherit.cpp  is_placeholder_expr.cpp  is_same.cpp  is_specialization.cpp  iterable_test.cpp  left_folds.cpp  logical_or.cpp  move.cpp  nested_apply.cpp  optim.cpp  parse_args.cpp  placeholders.hpp  right_folds.cpp  std_conditional.cpp  std_equal.cpp  std_index_sequence.cpp  std_is_same.cpp  strict_variadic_foldl.cpp  tag_dispatched.cpp  variadic_at.cpp  variadic_fold.cpp  variadic_foldl.cpp  variadic_foldl_alias.cpp  variadic_foldr.cpp  variadic_last.cpp  (+7 more)
test/ext/: std_tuple.cpp
test/foldable/: all_any_none.cpp  foldable.cpp
test/functional/: always.cpp  apply.cpp  apply_wrap.cpp  arg.cpp  argmap.cpp  as_placeholder.cpp  (+18 more)
(+2157 files in other folders)
